# CladExtract

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_readme.py  locale_sync.py
.github/workflows/: release.yml
docs/: languages.md
docs/en-US/: README.md
locales/: en-US.ftl
src/: config.rs  gui.rs  locale.rs  log.rs  logic.rs  main.rs  updater.rs
src/gui/: file_list.rs  image_preview.rs  settings.rs  welcome.rs
src/logic/: cache_directory.rs  rbx_storage_directory.rs  sql_database.rs
src/updater/: gui.rs
