[package]
name = "CladExtract"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "x11", "glow", "winit", "wayland"] }
egui = { version = "0.32", default-features = false }
egui_commonmark = { version = "0.21", default-features = false }
egui_dock = "0.17"
filetime = "0.2"
fluent-bundle = { version = "0.16", default-features = false }
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
native-dialog = "0.9"
open = "5.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
strum = { version = "0.27", features = ["derive"] }
sys-locale = "0.3"
unic-langid = "0.9"
whoami = { version = "1.6", default-features = false }
zstd = { version = "0.13", default-features = false }

[build-dependencies]
chrono = "0.4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
lto = true
strip = true
codegen-units = 1